katalog/kuma/multi-cluster/global-control-plane/resources/kuma-system-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kuma-system
  labels:
    kuma.io/system-namespace: "true"
